fixed some iframe nonsense to get things working on safari again

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ h2 {
 a {
     transition: color 1s, transform 0.5s;
     text-decoration-line: none;
+    text-decoration: none;
 }
 
 /* unvisited link */
